--- a/views/operations_views.xml
+++ b/views/operations_views.xml
@@ -197,7 +197,7 @@
                 <field name="projects_id"/>
                 <field name="user_id" widget="many2one_avatar_user"/>
                 <field name="name"/>
-                <filter name="filter_orders" string="Orders" domain="[('state', '=', 'purchase')]"/>
+                <filter name="filter_orders" string="Orders" domain="[('state', '=', 'order')]"/>
                 <filter name="filter_documents" string="Documents" domain="[('state', '=', 'done')]"/>
                 <filter name="filter_archived" string="Archived" domain="[('active', '=', False)]"/>
                 <group expand="0" string="Group by">
@@ -217,7 +217,7 @@
         <field name="type">ir.actions.act_window</field>
         <field name="res_model">farm.operations</field>
         <field name="view_mode">tree,form,calendar,pivot,graph</field>
-        <field name="context">{'search_default_filter_order': 1, 'default_state': 'purchase'}</field>
+        <field name="context">{'search_default_filter_order': 1, 'default_state': 'order'}</field>
         <field name="domain">[]</field>
         <field name="help" type="html">
             <p class="o_view_nocontent_smiling_face">
