--- a/views/equipments_views.xml
+++ b/views/equipments_views.xml
@@ -7,6 +7,38 @@
             <field name="arch" type="xml">
                 <form string="Equipments">
                     <sheet>
+                        <div class="oe_button_box" name="button_equipment_box">
+                            <button name="action_equipment_order_list" type="object"
+                                    class="oe_stat_button"
+                                    icon="fa-dollar">
+                                <div class="o_stat_info">
+                                    <field name="equipment_order_line_count"/>
+                                    <span class="o_stat_text"># order</span>
+                                </div>
+                            </button>
+                            <button name="action_equipment_order_list" type="object"
+                                    class="oe_stat_button"
+                                    icon="fa-dollar">
+                                <div class="o_stat_info">
+                                    <field name="currency_id" invisible="1"
+                                           groups="base.group_multi_currency"/>
+                                    <field name="equipment_order_line_cost" widget='monetary'
+                                           options="{'currency_field': 'currency_id'}"/>
+                                    <span class="o_stat_text">Order Cost</span>
+                                </div>
+                            </button>
+                            <button name="action_equipment_order_list" type="object"
+                                    class="oe_stat_button"
+                                    icon="fa-dollar">
+                                <div class="o_stat_info">
+                                    <field name="currency_id" invisible="1"
+                                           groups="base.group_multi_currency"/>
+                                    <field name="equipment_order_line_cost" widget='monetary'
+                                           options="{'currency_field': 'currency_id'}"/>
+                                    <span class="o_stat_text">Actual Cost</span>
+                                </div>
+                            </button>
+                        </div>
                         <div class="oe_title">
                             <h3>
                                 <group>
@@ -18,16 +50,23 @@
                         <group>
                             <group>
                                 <field name="description"/>
-                                <field name="total_order_cost"/>
                                 <field name="acq_date"/>
                                 <field name="body_code"/>
                             </group>
                             <group>
                                 <field name="type"/>
                                 <field name="product_id"/>
+                                <div>
+                                    <button name="create_equipment_product" string="Create Product" type="object"
+                                            class="oe_highlight" attrs="{'invisible':[('product_id','!=', False)]}"/>
+                                </div>
+                                <div>
+                                    <button name="update_equipment_product_price_unit" string="Update Price Unit"
+                                            type="object"/>
+                                </div>
                             </group>
                         </group>
-                        <field name="operation_order_line_ids">
+                        <field name="operation_order_line_ids" readonly="1">
                             <tree editable="bottom">
                                 <field name="operations_id"/>
                                 <field name="product_id"/>
@@ -58,7 +97,6 @@
                     <field name="code"/>
                     <field name="name"/>
                     <field name="description"/>
-                    <field name="total_order_cost"/>
                     <field name="acq_date"/>
                     <field name="body_code"/>
                     <field name="type"/>
