--- a/views/equipments_views.xml
+++ b/views/equipments_views.xml
@@ -7,15 +7,34 @@
             <field name="arch" type="xml">
                 <form string="Equipments">
                     <sheet>
+                        <div class="oe_button_box" name="button_operation_box">
+                            <button name="action_action" type="object"
+                                    class="oe_stat_button"
+                                    icon="fa-dollar">
+                                <div class="o_stat_info">
+                                    <field name="order_line_count"/>
+                                    <span class="o_stat_text"># Order</span>
+                                </div>
+                            </button>
+                            <button name="action_action" type="object"
+                                    class="oe_stat_button"
+                                    icon="fa-dollar">
+                                <div class="o_stat_info">
+                                    <field name="currency_id" invisible="1"
+                                           groups="base.group_multi_currency"/>
+                                    <field name="order_line_cost" widget='monetary'
+                                           options="{'currency_field': 'currency_id'}"/>
+                                    <span class="o_stat_text">Order Cost</span>
+                                </div>
+                            </button>
+                        </div>
                         <div class="oe_title">
                             <h3>
                                 <group>
                                     <field name="code"/>
                                     <field name="name"/>
-                                    <field name="currency_id" widget="selection" invisible="1"/>
-                                    <field name="order_line_count"/>
-                                    <field name="order_line_cost"/>
                                     <field name="actual_line_cost"/>
+                                    <field name="currency_id" widget="selection" invisible="1"/>
                                 </group>
                             </h3>
                         </div>
@@ -35,7 +54,8 @@
                                             class="oe_highlight" attrs="{'invisible':[('product_id','!=', False)]}"/>
                                 </div>
                                 <div>
-                                    <button name="update_equipment_product_price_unit" string="Re/Link and Update Price Unit"
+                                    <button name="update_equipment_product_price_unit"
+                                            string="Re/Link and Update Price Unit"
                                             type="object"/>
                                 </div>
                             </group>
