--- a/views/materials_views.xml
+++ b/views/materials_views.xml
@@ -88,14 +88,14 @@
                                     <group>
                                         <group>
                                             <field name="sequence" widget="handle" invisible="1"/>
-                                            <field name="product_id" widget="selection" class="oe_inline"/>
-                                            <field name="name" widget="section_and_note_text" class="oe_inline"/>
+                                            <field name="product_id" widget="selection"/>
+                                            <field name="name" widget="section_and_note_text"/>
                                             <field name="product_uom" class="oe_inline"/>
                                             <field name="qty" class="oe_inline"/>
                                         </group>
                                         <group>
-                                            <field name="price_unit" widget="monetary" class="oe_inline"/>
-                                            <field name="price_subtotal" sum="Total Cost" class="oe_inline"/>
+                                            <field name="price_unit" widget="monetary"/>
+                                            <field name="price_subtotal" sum="Total Cost"/>
                                             <field name="categ_id" widget="selection" invisible="1"/>
                                             <field name="company_id" widget="selection" invisible="1"/>
                                             <field name="currency_id" widget="selection" invisible="1"/>
@@ -127,7 +127,7 @@
                 <field name="projects_id"/>
                 <field name="short_name"/>
                 <field name="category_id"/>
-                <field name="user_id" widget="many2one_avatar_user"/>
+                <field name="user_id" widget="selection"/>
                 <field name="activity_ids" widget="list_activity"/>
                 <field name="issue_date"/>
                 <field name="m_order_cost" sum="Total Order"/>
@@ -199,7 +199,7 @@
             <search>
                 <field name="state"/>
                 <field name="projects_id"/>
-                <field name="user_id" widget="many2one_avatar_user"/>
+                <field name="user_id" widget="selection"/>
                 <field name="name"/>
                 <filter name="filter_orders" string="Orders" domain="[('state', '=', 'order')]"/>
                 <filter name="filter_documents" string="Documents" domain="[('state', '=', 'document')]"/>
