--- a/views/equipments_views.xml
+++ b/views/equipments_views.xml
@@ -67,6 +67,7 @@
                                             string="Re/Link and Update Price Unit"
                                             type="object"/>
                                 </div>
+                                <field name="company_id" widget="selection" groups="base.group_multi_company"/>
                             </group>
                         </group>
                         <notebook>
@@ -114,6 +115,7 @@
                     <field name="body_code"/>
                     <field name="type"/>
                     <field name="product_id"/>
+                    <field name="company_id" widget="selection" groups="base.group_multi_company"/>
                 </tree>
             </field>
         </record>
